--- a/week6/day3/less/4.less
+++ b/week6/day3/less/4.less
@@ -26,7 +26,7 @@ body{
         ul{
             position: relative;
             transform-style: preserve-3d;
-            transform: rotateX(45deg) rotateY(30deg);
+            // transform: rotateX(45deg) rotateY(30deg);
             // animation: move 1s infinite linear;
             transform-origin: 2.5rem 2.5rem  -2.5rem;
             .w();
