--- a/week6/day3/交互简历/css/index.css
+++ b/week6/day3/交互简历/css/index.css
@@ -10,12 +10,14 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   font-size: 16px;
 }
 html > section,
 body > section {
   width: 100%;
   height: 100%;
+  overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -23,7 +25,7 @@ body > section {
 html section.loadingBox,
 body section.loadingBox {
   background: #333;
-  transition: opacity 1s 1s;
+  transition: opacity 1s;
   z-index: 30;
   text-align: center;
   color: #fff;
@@ -64,6 +66,7 @@ body section.phoneBox {
   background: url('../images/phone-bg.jpg');
   background-size: cover;
   z-index: 20;
+  transition: transform 0.8s;
 }
 html section.phoneBox header,
 body section.phoneBox header {
@@ -104,13 +107,22 @@ body section.phoneBox footer .circle {
 html section.phoneBox .overBox,
 body section.phoneBox .overBox {
   width: 90vw;
-  background: url('../images/phone-key.png');
+  background: url('../images/phone-key.png') no-repeat;
   height: 115vw;
   background-size: contain;
   position: absolute;
   left: 5vw;
   bottom: 0.2rem;
   transition: all 0.5s;
+}
+html section.phoneBox .overBox .overBtn,
+body section.phoneBox .overBox .overBtn {
+  position: absolute;
+  width: 26vw;
+  height: 26vw;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 7vw;
 }
 html section.phoneBox .bot,
 body section.phoneBox .bot {
@@ -123,4 +135,126 @@ body section.phoneBox .bot {
   100% {
     transform: scale(1.4);
   }
+}
+html section.chatBox,
+body section.chatBox {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #db5c5c;
+  z-index: 10;
+}
+html section.chatBox .chatMsgBox,
+body section.chatBox .chatMsgBox {
+  padding: 5vw;
+  transition: all 0.4s;
+}
+html section.chatBox .chatMsgBox li,
+body section.chatBox .chatMsgBox li {
+  overflow: hidden;
+  margin-bottom: 5vw;
+  transition: all 0.5s;
+}
+html section.chatBox .chatMsgBox li > div,
+body section.chatBox .chatMsgBox li > div {
+  float: left;
+}
+html section.chatBox .chatMsgBox li .imgBox,
+body section.chatBox .chatMsgBox li .imgBox {
+  width: 13vw;
+  height: 13vw;
+  border-radius: 50%;
+  overflow: hidden;
+}
+html section.chatBox .chatMsgBox li .imgBox img,
+body section.chatBox .chatMsgBox li .imgBox img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+html section.chatBox .chatMsgBox li .msg,
+body section.chatBox .chatMsgBox li .msg {
+  max-width: 60vw;
+  padding: 3.5vw;
+  margin-left: 4vw;
+  background: #fff;
+  border: 1px solid #eee;
+  box-sizing: border-box;
+  border-radius: 7px;
+  word-break: break-all;
+}
+html section.chatBox .chatMsgBox li .msg::before,
+body section.chatBox .chatMsgBox li .msg::before {
+  content: '';
+  display: block;
+  width: 3vw;
+  height: 3vw;
+  border: 1px solid #eee;
+  border-top: none;
+  border-right: none;
+  background: #fff;
+  transform: translateX(-5vw) translateY(1vw) rotate(45deg);
+  position: absolute;
+}
+html section.chatBox .chatMsgBox li.right,
+body section.chatBox .chatMsgBox li.right {
+  overflow: hidden;
+}
+html section.chatBox .chatMsgBox li.right > div,
+body section.chatBox .chatMsgBox li.right > div {
+  float: right;
+}
+html section.chatBox .chatMsgBox li.right .msg,
+body section.chatBox .chatMsgBox li.right .msg {
+  margin-left: 0;
+  margin-right: 4vw;
+  position: relative;
+  background: #76f56b;
+  border-color: #83dd80;
+}
+html section.chatBox .chatMsgBox li.right .msg::before,
+body section.chatBox .chatMsgBox li.right .msg::before {
+  background: #76f56b;
+  border: 1px solid #83dd80;
+  border-bottom: none;
+  border-left: none;
+  transform: translateY(1vw) rotate(45deg);
+  right: -1.5vw;
+}
+html section.chatBox .chatMsgBox li.opa,
+body section.chatBox .chatMsgBox li.opa {
+  transform: translateY(1rem);
+  opacity: 0;
+}
+html section.chatBox .keyboard,
+body section.chatBox .keyboard {
+  width: 7.5rem;
+  height: 6.05rem;
+  background: url('../images/message-keyboard.png') no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: -0.5rem;
+  transition: transform 0.5s;
+}
+html section.chatBox .keyboard .chatBtn,
+body section.chatBox .keyboard .chatBtn {
+  position: absolute;
+  width: 1.72265625rem;
+  height: 0.8671875rem;
+  background: url('../images/message-chatBtn.png') no-repeat;
+  background-size: contain;
+  right: 0.1rem;
+  bottom: 0.7rem;
+}
+html section.chatBox .keyboard p,
+body section.chatBox .keyboard p {
+  position: absolute;
+  width: 4.8rem;
+  height: 0.5rem;
+  top: 0.4rem;
+  left: 1rem;
+}
+html section.chatBox .bot,
+body section.chatBox .bot {
+  transform: translateY(4.4rem);
 }
