--- a/week6/day3/交互简历/less/index.less
+++ b/week6/day3/交互简历/less/index.less
@@ -162,7 +162,7 @@ html,body{
                         width: 3vw;
                         height: 3vw;
                         border: 1px solid #eee;
-                        // border-color: transparent transparent  #eee  #eee;
+                        // border-color: transparent transparent  #eee  transparent;
                         border-top:none;
                         border-right: none;
                         background: #fff;
